<resources>
    <string name="app_name">Heartware</string>

    <string-array name="disabilities_array">
        <item name="diabetes">Diabetes</item>
        <item name="not_running">Not Running</item>
        <item name="not_swimming">Not Swimming</item>
        <item name="not_golfing">Not Golfing</item>
    </string-array>

    <string name="profile_tab">Profile</string>
    <string name="friends_tab">Friends</string>
    <string name="meetups_tab">Meetups</string>
    <string name="graph_data">Graph Data</string>
    <string name="goals">Goals</string>
    <string name="workouts">Workouts</string>
    <string name="meetups">Meetups</string>
    <string name="new_meetup">New Meetup</string>
    <string name="create_meetup">Create Meetup</string>
    <string name="jbone_login">Enter Jawbone UP Info</string>
    <string name="add_button">Add</string>
    <string name="new_user">New User</string>
    <string name="sex">Sex</string>
    <string name="sex_hint">male, female, whatever</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="undefined">Undefined</string>
    <string name="age">Age</string>
    <string name="age_hint">0, 1, 2, 3, ..., N</string>
    <string name="username_hint">your name is ...</string>
    <string name="returning_user">Returning User</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="friends">Friends</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="exercise">Exercise</string>
    <string name="goal">Goal</string>
    <string name="difficulty">Difficulty</string>
    <string name="disability">Disability</string>
    <string name="exemptions">Exemptions</string>
    <string name="recommendation">Get Recommendation</string>
    <string name="user_info">User Information</string>
    <string name="data">Data</string>
    <string name="place">Place</string>
    <string name="time">Time</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="beginner">Beginner</string>
    <string name="interm">Intermediate</string>
    <string name="skill_level">Skill Level</string>
    <string name="expert">Expert</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="hard">Hard</string>
    <string name="sync">Sync</string>
    <string name="new_workout">New Workout</string>
    <string name="fb_update">Update Status</string>
    <string name="fb_post_image">Post Image</string>
    <string name="jbone_logo">Jawbone</string>
    <!-- facebook_app_id is necessary for Facebook SDK -->
    <string name="facebook_app_id">795766887172566</string>

    <!-- facebook stuff from Scrumptious exmapele -->

    <string name="get_started">To get started, login using Facebook</string>
    <string name="skip_login">continue as a guest</string>
    <string name="action_exercising">Pick Exercise</string>
    <string name="action_location">Pick Location</string>
    <string name="action_people">Pick Friends</string>
    <string name="action_photo">Pick Photo</string>
    <string name="action_eating_default">Select a meal</string>
    <string name="action_exercising_default">Select an exercise</string>
    <string name="action_location_default">Select a place</string>
    <string name="action_people_default">Select friends</string>
    <string name="action_photo_default">Take one</string>
    <string name="action_photo_ready">Ready</string>
    <string name="action_photo_camera">Take Photo</string>
    <string name="action_photo_gallery">Choose Existing</string>
    <string name="announce">Announce</string>
    <string name="picker_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="picker_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="picker_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="picker_picker_done_button_text">Done</string>
    <string name="message">Send with Messenger</string>
    <string name="settings">Settings</string>
    <string name="select_meal">Select a meal</string>
    <string name="select_exercise">Select an Exercise</string>
    <string name="enter_exercise">Enter Exercise</string>
    <string name="result_dialog_title">Result</string>
    <string name="result_dialog_button_text">Thanks!</string>
    <string name="result_dialog_text_with_id">Posted Open Graph action, id: %1$s</string>
    <string name="result_dialog_text_default">Post action complete.</string>
    <string name="result_dialog_text_canceled">Post canceled.</string>
    <string name="progress_dialog_text">Announcing, please wait...</string>
    <string name="single_user_selected">%1$s</string>
    <string name="two_users_selected">%1$s and %2$s</string>
    <string name="multiple_users_selected">%1$s and %2$s others</string>
    <string name="error_dialog_title">Something Went Wrong</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="error_dialog_default_text">No response from server.</string>
    <string name="no_location_error">Could not obtain your current location</string>
    <string name="select_picture">Select Picture</string>
    <string name="rejected_publish_permission">Publish permission rejected, canceling.</string>
    <string name="error_transient">A temporary error occurred, please try again later.</string>
    <string name="error_unknown">An unknown error occurred, please contact the developer with the following message: %1$s</string>
    <string name="exception">Exception: %1$s</string>
    <string name="ok">OK</string>
    <string name="usersettings_fragment_log_in_button">Log in&#8230;</string>
    <string name="usersettings_fragment_logged_in">Logged in</string>
    <string name="usersettings_fragment_not_logged_in">Not logged in</string>
    <string name="usersettings_fragment_logo_content_description">Facebook Logo</string>
    <string name="logo_content_description">logo</string>
    <string name="food_image_content_description">Food image</string>
    <string name="choose_friends">Choose Friends</string>
    <string name="nearby">Nearby</string>

    <string-array name="exercise_types">
        <item>Jogging</item>
        <item>Lifting</item>
        <item>Swimming</item>
        <item>Hiking</item>
        <item>Masturbating</item>
        <item>Walking</item>
        <item>Boxing</item>
        <item>Yoga</item>
        <item>&lt;Other&gt;</item>
    </string-array>

    <string-array name="exercise_og_urls">
        <item>https://scrumptious-facebook.parseapp.com/meals/cheeseburger/</item> <!-- Cheeseburger -->
        <item>https://scrumptious-facebook.parseapp.com/meals/pizza/</item> <!-- Pizza -->
        <item>https://scrumptious-facebook.parseapp.com/meals/hotdog/</item> <!-- Hotdog -->
        <item>https://scrumptious-facebook.parseapp.com/meals/italian/</item> <!-- Italian -->
        <item>https://scrumptious-facebook.parseapp.com/meals/french/</item> <!-- French -->
        <item>https://scrumptious-facebook.parseapp.com/meals/chinese/</item> <!-- Chinese -->
        <item>https://scrumptious-facebook.parseapp.com/meals/thai/</item> <!-- Thai -->
        <item>https://scrumptious-facebook.parseapp.com/meals/indian/</item> <!-- Indian -->
        <item></item>
        <item></item>
    </string-array>


</resources>
