<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:title="@string/app_name"
        android:id="@+id/action_auth"
        android:icon="@drawable/ic_action_logout"
        app:showAsAction="always" />
    <item android:title="@string/update"
          android:id="@+id/action_update"
          app:showAsAction="ifRoom|withText" />
    <item android:title="@string/workouts"
          android:id="@+id/action_workouts"
          android:icon="@drawable/ic_action_workout"
          app:showAsAction="ifRoom|withText" />
    <item android:title="@string/friends"
          android:id="@+id/action_friends"
          android:icon="@drawable/ic_action_friends"
          app:showAsAction="ifRoom|withText" />
</menu>
