<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/user_info"
        android:textColor="#ffffffff"
        android:textSize="25sp"
        android:background="#ff000000"
        android:gravity="center_vertical|center_horizontal"/>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:id="@+id/tvName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username_hint"
            android:textColorHint="@color/faded_hint"
            android:ems="10"
            android:id="@+id/etName"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow4">

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow5">

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow6">

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/skill_level"
            android:id="@+id/tvSkillLevel" />
        <RadioGroup
            android:id="@+id/rgDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beginner"
                android:id="@+id/rbBeginner"
                android:buttonTint="@color/radio_button_color"
                android:textSize="12dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interm"
                android:id="@+id/rbInterm"
                android:buttonTint="@color/radio_button_color"
                android:textSize="12dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise"
                android:id="@+id/rbExpert"
                android:buttonTint="@color/radio_button_color"
                android:textSize="12dp" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/disability"
            android:id="@+id/tvDisability"
            android:layout_column="0" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerDisabilities"
            android:layout_weight="1" />

    </TableRow>
</TableLayout>