<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:facebook="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="heartware.com.heartware_master.FriendsActivity">

    <TextView android:text="@string/friends" android:layout_width="wrap_content"
              android:layout_height="wrap_content" />

    <com.facebook.widget.LoginButton
        android:id="@+id/bAuthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        facebook:fetch_user_info="true"
        facebook:confirm_logout="false"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


    <com.facebook.widget.ProfilePictureView
        android:id="@+id/vProfilePicture"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        facebook:preset_size="normal"
        android:layout_above="@+id/bAuthButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_below="@+id/bAuthButton"
        android:textSize="18sp"
        android:hint="@string/data"/>

    <Button
        android:id="@+id/bUpdateStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fb_update"
        android:layout_below="@+id/tvUserName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/bPostImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fb_post_image"
        android:layout_below="@+id/bUpdateStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


</RelativeLayout>